unpackaged/objects/AccountPlanEstimates__c.object
<CustomObject>
  <description>Account Plan Financials Numbers (Targets, Estimates, Budget, ....)</description>
  <fields>
    <fullName>AccountName__c</fullName>
    <formula>AccountPlan__r.Account__r.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>AccountPlan__c</fullName>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipName>Account_Plan_Target_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>AnnualSalesQuota__c</fullName>
    <formula>CASE(TEXT(TrackingPeriod__c),
'Annually', Annual__c,
 Q1SalesQuota__c  +  Q2SalesQuota__c  + Q3SalesQuota__c + Q4SalesQuota__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Sales Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Annual__c</fullName>
    <label>Annual #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>April__c</fullName>
    <label>April #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>August__c</fullName>
    <label>August #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>BusinessUnitSize__c</fullName>
    <defaultValue>0</defaultValue>
    <label>BU Size (Amount)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>BusinessUnit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>CAD/CAM</fullName>
        </value>
        <value>
          <fullName>Endodontics</fullName>
        </value>
        <value>
          <fullName>Imaging</fullName>
        </value>
        <value>
          <fullName>Implants</fullName>
        </value>
        <value>
          <fullName>Lab (Prosthetics)</fullName>
        </value>
        <value>
          <fullName>Orthodontics</fullName>
        </value>
        <value>
          <fullName>Preventive</fullName>
        </value>
        <value>
          <fullName>Restorative</fullName>
        </value>
        <value>
          <fullName>Treatment Centers</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>DSMarketShare__c</fullName>
    <formula>(LatestEstimate__c /  BusinessUnitSize__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically Calculated (Latest Estimate / Size)</inlineHelpText>
    <label>DS Market Share %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>December__c</fullName>
    <label>December #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>February__c</fullName>
    <label>February #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>January__c</fullName>
    <label>January #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>July__c</fullName>
    <label>July #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>June__c</fullName>
    <label>June #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>LatestEstimate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Latest Estimate (LE)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>March__c</fullName>
    <label>March #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>May__c</fullName>
    <label>May #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>November__c</fullName>
    <label>November #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>October__c</fullName>
    <label>October</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Q1SalesQuota__c</fullName>
    <formula>CASE(TEXT(TrackingPeriod__c),
'Quarterly',  Q1__c,
'Annually',  Annual__c / 4,
January__c + February__c + March__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q1 Sales Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Q1__c</fullName>
    <label>Q1 #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Q2SalesQuota__c</fullName>
    <formula>CASE(TEXT(TrackingPeriod__c),
'Quarterly', Q2__c,
'Annually', Annual__c / 4,
April__c + May__c + June__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q2 Sales Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Q2__c</fullName>
    <label>Q2 #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Q3SalesQuota__c</fullName>
    <formula>CASE(TEXT(TrackingPeriod__c),
'Quarterly', Q3__c,
'Annually', Annual__c / 4,
July__c + August__c + September__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q3 Sales Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Q3__c</fullName>
    <label>Q3 #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>September__c</fullName>
    <label>September #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>TrackingPeriod__c</fullName>
    <inlineHelpText>How do you want to track your expected sales?</inlineHelpText>
    <label>Tracking Period</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Monthly</fullName>
          <default>true</default>
          <label>Monthly</label>
        </value>
        <value>
          <fullName>Quarterly</fullName>
        </value>
        <value>
          <fullName>Annually</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Year__c</fullName>
    <formula>TEXT(AccountPlan__r.Year__c)</formula>
    <label>Calendar Year</label>
    <type>Text</type>
  </fields>
  <label>Sales Quota Line</label>
  <nameField>
    <displayFormat>SQL{0000}</displayFormat>
    <label>Name</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Sales Quota Lines</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>